dhall/tests/type-inference/failure/unit/IfNotBool.txt
Type error: error: InvalidPredicate
 --> <current file>:1:1
  |
1 | if 1 then 1 else 1
  | ^^^^^^^^^^^^^^^^^^ InvalidPredicate
  |
